syntax = "proto3";

package nicolaemariusghergu;

option go_package = "nicolaemariusghergu/proto-files";

service RouteGuide {
  rpc RouteChat (stream Request) returns (stream Response);
}

message ClientInfo {
  string name = 1;
  int32 exercise_number =2;
}

message Request {
  ClientInfo client_info = 1;
  int32 exercise_number = 2;
  repeated string string_array = 3;
}

message Response {
  ClientInfo client_info = 1;
  string response = 2;
  int32 exercise_number = 3;
  repeated string result_array = 4;
}